--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -6,4 +6,9 @@
         <item name="textFillColor">@color/sec_color</item>
         <item name="strokeColor">@color/sec_color</item>
     </style>
+    <style name="label_color">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/lb_text_color</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
