--- a/project/app/src/main/res/values/colors.xml
+++ b/project/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="sec_color">#9BC8F2</color>
+    <color name="lb_text_color">#626262</color>
+    <color name="et_background">#F5F5F5</color>
+    <color name="et_hint">#F5F5F5</color>
+    <color name="dark_blue_text">#1F2156</color>
 </resources>
