--- a/project/app/src/main/res/drawable/edit_text_background.xml
+++ b/project/app/src/main/res/drawable/edit_text_background.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/et_background"/>
+    <corners android:radius="7dp" />
+    <stroke
+        android:width="5px"
+        android:color="@color/et_background" />
+    <size
+        android:width="35dp"
+        android:height="50dp" />
+</shape>
