--- a/project/app/src/main/res/layout/activity_login.xml
+++ b/project/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login">
+    tools:context=".MainActivity"
+    android:background="@color/white">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome back! Glad to see you, Again!"
+        style="@style/label_heading"
+        android:id="@+id/lbHeading_login"
+        android:padding="40sp"
+        android:layout_marginTop="50dp"/>
+    <EditText
+        android:id="@+id/tbUsername_login"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:hint="Username"
+        android:textColorHint="@color/et_hint"
+        style="@style/et_Text"
+        android:background="@drawable/edit_text_background"
+        android:layout_below="@+id/lbHeading_login"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="60dp"/>
+
+    <EditText
+        android:id="@+id/tbPassword_login"
+        style="@style/et_Text"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/tbUsername_login"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_text_background"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textColorHint="@color/et_hint" />
+
+    <Button
+        android:id="@+id/btLogin"
+        android:layout_width="300sp"
+        android:layout_height="50sp"
+        android:layout_below="@id/tbPassword_login"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="60sp"
+        android:background="@drawable/bt_sec_color"
+        android:text="Login"
+        android:textSize="18sp" />
+
+</RelativeLayout>
