--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -11,4 +11,15 @@
         <item name="android:textColor">@color/lb_text_color</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="label_heading">
+        <item name="android:textSize">34sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="et_Text">
+        <item name="hintTextColor">@color/et_hint</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
