--- a/project/app/src/main/res/layout/activity_cregistration.xml
+++ b/project/app/src/main/res/layout/activity_cregistration.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".C_Registration"
     android:background="@color/white">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome back! Glad to see you, Again!"
+        android:text="Hello ! Register to get started"
         style="@style/label_heading"
         android:id="@+id/lbHeading_login"
-        android:padding="40sp"
-        />
+        android:padding="40sp" />
     <EditText
-        android:id="@+id/tbUsername_login"
+        android:id="@+id/tbUsername_login_r"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:hint="Username"
@@ -25,40 +24,58 @@
         android:background="@drawable/edit_text_background"
         android:layout_below="@+id/lbHeading_login"
         android:layout_centerInParent="true"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="20dp"/>
 
     <EditText
-        android:id="@+id/tbPassword_login"
+        android:id="@+id/tbPassword_login_r"
         style="@style/et_Text"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/tbUsername_login"
+        android:layout_below="@+id/tbUsername_login_r"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:background="@drawable/edit_text_background"
         android:hint="Password"
         android:inputType="textPassword"
         android:textColorHint="@color/et_hint" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password"
-        android:id="@+id/lbForgotPassword"
-        android:fontFamily="monospace"
-        android:textColor="@color/black"
-        android:layout_marginTop="50dp"
-        android:layout_alignRight="@id/tbPassword_login"
-        android:layout_below="@id/tbPassword_login"/>
+    <EditText
+        android:id="@+id/tbConfirmPassword_login_r"
+        style="@style/et_Text"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/tbPassword_login_r"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/edit_text_background"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textColorHint="@color/et_hint" />
+
+    <EditText
+        android:id="@+id/tbEmail_r"
+        style="@style/et_Text"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/tbConfirmPassword_login_r"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/edit_text_background"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:textColorHint="@color/et_hint" />
 
     <Button
         android:id="@+id/btLogin"
         android:layout_width="300sp"
         android:layout_height="50sp"
-        android:layout_below="@id/lbForgotPassword"
+        android:layout_below="@id/tbEmail_r"
         android:layout_centerInParent="true"
         android:layout_marginTop="60sp"
         android:background="@drawable/bt_sec_color"
-        android:text="Login"
+        android:text="Register"
         android:textSize="18sp" />
 
 </RelativeLayout>
