--- a/project/app/src/main/res/values/colors.xml
+++ b/project/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="et_background">#F5F5F5</color>
     <color name="et_hint">#C9C9C9</color>
     <color name="dark_blue_text">#1F2156</color>
+    <color name="appOrange">#E34918</color>
+    <color name="iconPress">#676767</color>
 </resources>
