--- a/project/app/src/main/res/layout/activity_clogin_or_register2.xml
+++ b/project/app/src/main/res/layout/activity_clogin_or_register2.xml
@@ -29,25 +29,39 @@
         android:text="Register as"
         style="@style/label_color" />
     <Button
-        android:id="@+id/btLogin"
+        android:id="@+id/btCustomer"
         android:layout_width="300sp"
         android:layout_height="50sp"
         android:layout_below="@id/lbRegisterAs"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="40sp"
-        android:background="@drawable/bt_sec_color"
-        android:text="Vendor"
-        android:textSize="18sp" />
-    <Button
-        android:id="@+id/btRegister"
-        android:layout_width="300sp"
-        android:layout_height="50sp"
-        android:layout_below="@id/btLogin"
         android:layout_centerInParent="true"
         android:layout_marginTop="20sp"
         android:text="Customer"
         android:textSize="18sp"
         android:background="@drawable/button_outline"
         android:textColor="@color/sec_color"/>
+
+    <Button
+        android:id="@+id/btSupplier"
+        android:layout_width="300sp"
+        android:layout_height="50sp"
+        android:layout_below="@id/btCustomer"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/bt_sec_color"
+        android:text="Supplier"
+        android:textSize="18sp" />
+
+
+    <Button
+        android:id="@+id/btAdmin"
+        android:layout_width="300sp"
+        android:layout_height="50sp"
+        android:layout_below="@id/btSupplier"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/dark_blue_button"
+        android:text="Admin"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
 
 </RelativeLayout>
