--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -22,4 +22,14 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+    <style name="backButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_width">40dp</item>
+        <item name="android:src">@drawable/backbutton</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:scaleType">centerInside</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:layout_margin">20dp</item>
+    </style>
+
 </resources>
