--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -25,11 +25,14 @@
     <style name="backButton" parent="Widget.AppCompat.ImageButton">
         <item name="android:layout_height">40dp</item>
         <item name="android:layout_width">40dp</item>
-        <item name="android:src">@drawable/backbutton</item>
+        <item name="android:src">@drawable/backButton</item>
         <item name="android:padding">0dp</item>
         <item name="android:scaleType">centerInside</item>
         <item name="android:background">@color/white</item>
         <item name="android:layout_margin">20dp</item>
+    </style>
+    <style name="CardImage" parent="Widget.AppCompat.ImageButton">
+        <item name="android:scaleType">centerInside</item>
     </style>
 
 </resources>
