--- a/project/app/src/main/res/layout/rv_carditems.xml
+++ b/project/app/src/main/res/layout/rv_carditems.xml
@@ -4,22 +4,75 @@
     android:layout_height="350dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
-    app:cardCornerRadius="30dp"
+    app:cardCornerRadius="40dp"
     android:elevation="10dp"
-    android:layout_margin="25dp">
+    android:layout_margin="25dp"
+    android:id="@+id/dealsCard">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <ImageView
-            android:id="@+id/card_img"
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="184dp"
             android:layout_margin="20dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/img1" />
+            app:cardCornerRadius="35dp"
+            android:id="@+id/innerCard">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/card_img"
+                android:layout_width="wrap_content"
+                android:layout_height="184dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img1"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/listingTitle"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Pure Milford Sound Cruise"
+            android:layout_below="@+id/innerCard"
+            android:textColor="@color/dark_blue_text"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:layout_marginLeft="30dp"
+            android:layout_centerVertical="true"/>
+        <TextView
+            android:id="@+id/rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rating"
+            android:textColor="@color/black"
+            android:layout_below="@+id/listingTitle"
+            android:textSize="18sp"
+            android:layout_marginLeft="35dp"
+            android:textStyle="italic"
+            android:layout_marginTop="10dp"/>
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="$89"
+            android:textColor="@color/black"
+            android:layout_below="@id/innerCard"
+            android:layout_alignRight="@id/innerCard"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:layout_marginRight="10dp"/>
+
+        <RatingBar
+            android:layout_width="150dp"
+            android:layout_height="90dp"
+            android:layout_below="@id/rating"
+            android:rating="5"
+            android:scaleX="0.5"
+            android:scaleY="0.5"/>
+
+
+
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
