--- a/project/app/src/main/res/values/colors.xml
+++ b/project/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="dark_blue_text">#1F2156</color>
     <color name="appOrange">#E34918</color>
     <color name="iconPress">#676767</color>
+    <color name="star">#D7A31C</color>
 </resources>
