--- a/project/app/src/main/res/layout/rv_carditems.xml
+++ b/project/app/src/main/res/layout/rv_carditems.xml
@@ -45,11 +45,11 @@
             android:id="@+id/rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rating"
+            android:text="Tap for more details"
             android:textColor="@color/black"
             android:layout_below="@+id/listingTitle"
-            android:textSize="18sp"
-            android:layout_marginLeft="35dp"
+            android:textSize="16sp"
+            android:layout_marginLeft="30dp"
             android:textStyle="italic"
             android:layout_marginTop="10dp"/>
         <TextView
@@ -65,12 +65,28 @@
             android:layout_marginRight="10dp"/>
 
         <RatingBar
-            android:layout_width="150dp"
+
+            android:layout_width="245dp"
             android:layout_height="90dp"
             android:layout_below="@id/rating"
             android:rating="5"
-            android:scaleX="0.5"
-            android:scaleY="0.5"/>
+            android:scaleX="0.6"
+            android:scaleY="0.6"
+            android:numStars="5"
+            android:progressTint="@color/star"
+            />
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:text="50% off"
+            android:layout_below="@id/price"
+            android:background="@color/appOrange"
+            android:layout_alignRight="@id/innerCard"
+            android:textSize="22sp"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textStyle="italic"
+
 
 
 
