--- a/project/app/src/main/res/layout/rv_carditems.xml
+++ b/project/app/src/main/res/layout/rv_carditems.xml
@@ -51,7 +51,7 @@
             android:textSize="16sp"
             android:layout_marginLeft="30dp"
             android:textStyle="italic"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="2dp"/>
         <TextView
             android:id="@+id/price"
             android:layout_width="wrap_content"
@@ -65,7 +65,6 @@
             android:layout_marginRight="10dp"/>
 
         <RatingBar
-
             android:layout_width="245dp"
             android:layout_height="90dp"
             android:layout_below="@id/rating"
@@ -76,16 +75,19 @@
             android:progressTint="@color/star"
             />
         <TextView
-            android:layout_width="120dp"
-            android:layout_height="40dp"
+            android:layout_width="80dp"
+            android:layout_height="35dp"
             android:text="50% off"
             android:layout_below="@id/price"
-            android:background="@color/appOrange"
-            android:layout_alignRight="@id/innerCard"
-            android:textSize="22sp"
+            android:background="@drawable/deal_label"
+            android:layout_marginLeft="240dp"
+
+            android:textSize="18sp"
             android:textColor="@color/white"
             android:textAlignment="center"
+            android:padding="5dp"
             android:textStyle="italic"
+            android:layout_marginTop="8dp"/>
 
 
 
