--- a/project/app/src/main/res/layout/rv_carditems.xml
+++ b/project/app/src/main/res/layout/rv_carditems.xml
@@ -65,6 +65,7 @@
             android:layout_marginRight="10dp"/>
 
         <RatingBar
+            android:id="@+id/stars"
             android:layout_width="245dp"
             android:layout_height="90dp"
             android:layout_below="@id/rating"
@@ -75,6 +76,7 @@
             android:progressTint="@color/star"
             />
         <TextView
+            android:id="@+id/card_offer"
             android:layout_width="80dp"
             android:layout_height="35dp"
             android:text="50% off"
