working on homescreen

--- a/project/app/src/main/res/layout/activity_chome_screen.xml
+++ b/project/app/src/main/res/layout/activity_chome_screen.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".C_homeScreen"
     android:background="@color/white">
 
-</androidx.recyclerview.widget.RecyclerView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/homeScreen"
+        android:layout_width="match_parent"
+        android:layout_height="550dp"
+        android:layout_marginTop="80dp"
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".C_homeScreen" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginTop="662dp"
+        android:background="@color/sec_color">
+
+
+    </LinearLayout>
+
+</RelativeLayout>
