--- a/project/app/src/main/res/layout/activity_chome_screen.xml
+++ b/project/app/src/main/res/layout/activity_chome_screen.xml
@@ -18,8 +18,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginTop="662dp"
+        android:layout_alignParentBottom="true"
         android:background="@color/sec_color">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/sec_color">
+
+        </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
     </LinearLayout>
