--- a/project/app/src/main/res/layout/activity_chome_screen.xml
+++ b/project/app/src/main/res/layout/activity_chome_screen.xml
@@ -5,12 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:layout_centerHorizontal="true">
+        <Button
+            style="@style/btdealAndCat"
+            android:text="Featured Deals"
+            android:layout_marginRight="40dp"
+            />
+        <Button
+            style="@style/btdealAndCat"
+            android:text="Categories"/>
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/homeScreen"
         android:layout_width="match_parent"
-        android:layout_height="550dp"
-        android:layout_marginTop="80dp"
+        android:layout_height="500dp"
+        android:layout_marginTop="240dp"
         android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         tools:context=".C_homeScreen" />
