--- a/project/app/src/main/res/layout/rv_carditems.xml
+++ b/project/app/src/main/res/layout/rv_carditems.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="350dp"
+    android:layout_height="320dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/button_outline"
     app:cardCornerRadius="40dp"
     android:elevation="20dp"
-    android:layout_margin="25dp"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp"
     android:id="@+id/rv_carditems">
 
     <RelativeLayout
@@ -16,7 +17,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
-            android:layout_height="184dp"
+            android:layout_height="154dp"
             android:layout_margin="20dp"
             app:cardCornerRadius="35dp"
             android:id="@+id/innerCard">
@@ -24,7 +25,7 @@
             <ImageView
                 android:id="@+id/card_img"
                 android:layout_width="wrap_content"
-                android:layout_height="184dp"
+                android:layout_height="154dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/img1"/>
 
