Categories fragment updated

--- a/project/app/src/main/res/layout/fragment_category_frag.xml
+++ b/project/app/src/main/res/layout/fragment_category_frag.xml
@@ -9,11 +9,17 @@
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp">
 
         <Button
             style="@style/darkBlueButton"
             android:text="things to do"
+            />
+        <Button
+            style="@style/darkBlueButton"
+            android:layout_marginTop="300dp"
+            android:text="Restaurants"
             />
     </RelativeLayout>
 
