--- a/project/app/src/main/res/layout/activity_chome_screen.xml
+++ b/project/app/src/main/res/layout/activity_chome_screen.xml
@@ -8,7 +8,7 @@
     <SearchView
         android:id="@+id/search_view"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
@@ -16,7 +16,7 @@
         android:queryHint="Search"
         android:iconifiedByDefault="false"
         android:backgroundTint="@color/sec_color"
-        android:elevation="3dp"
+
 
         />
 
@@ -31,34 +31,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabTextColor="@color/black"
-
-
             app:tabIndicatorColor="@color/sec_color"
-            app:tabIndicatorHeight="4dp">
+            app:tabIndicatorHeight="4dp"
+            android:id="@+id/home_tab">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Featured Deals" />
+                android:text="Featured Deals"
+                android:id="@+id/bt_tab_featured_deals"/>
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Categories" />
+                android:text="Categories"
+                android:id="@+id/bt_tab_categories"/>
 
 
         </com.google.android.material.tabs.TabLayout>
 
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/homeScreen"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/homeScreen"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="500dp"-->
 
-        android:background="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:context=".C_homeScreen"
-        android:layout_below="@id/tab_layout"/>
+<!--        android:background="@color/white"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:context=".C_homeScreen"-->
+<!--        android:layout_below="@id/tab_layout"/>-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="550dp"
+        android:layout_below="@id/tab_layout">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/frame_layout"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
