--- a/project/app/src/main/res/layout/fragment_user_details.xml
+++ b/project/app/src/main/res/layout/fragment_user_details.xml
@@ -8,16 +8,21 @@
 
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
+        android:id="@+id/rl_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
+
         <TextView
             android:id="@+id/lb_my_details"
+            style="@style/label_heading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="My Details"
-            style="@style/label_heading"
-            android:layout_margin="30dp"/>
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="30dp"
+            android:text="My Details" />
 
         <ImageView
             android:id="@+id/ic_profile"
@@ -28,14 +33,85 @@
             android:layout_marginLeft="20dp"
             />
         <TextView
+            android:id="@+id/lb_full_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Full Name"
+            android:text="John Doe"
             style="@style/label_color"
             android:layout_toRightOf="@id/ic_profile"
             android:layout_below="@id/lb_my_details"
             android:layout_marginTop="10dp"
-            android:textSize="26dp"
+            android:textSize="26dp"/>
 
+        <ImageView
+            android:id="@+id/ic_user_type"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/lb_full_name"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_toRightOf="@id/ic_profile"
+            android:src="@drawable/ic_user_type" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Standard User"
+            android:textColor="@color/black"
+            android:layout_below="@+id/lb_full_name"
+            android:layout_toRightOf="@+id/ic_user_type"
+            android:layout_marginTop="12dp"
+            android:textSize="18sp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/ic_profile">
+            <ImageView
+                android:id="@+id/ic_mail"
+                style="@style/user_details_icon"
+                android:src="@drawable/ic_mail"/>
+            <TextView
+                android:id="@+id/lb_password"
+                style="@style/user_details"
+                android:text="JohnDoe@gmail.com"
+                android:layout_toRightOf="@id/ic_mail"/>
+            <ImageView
+                android:id="@+id/ic_password"
+                style="@style/user_details_icon"
+                android:src="@drawable/ic_change_password"
+                android:layout_below="@id/ic_mail"/>
+            <TextView
+                android:id="@+id/lb_bookings"
+                style="@style/user_details"
+                android:text="Change Password"
+                android:layout_toRightOf="@id/ic_password"
+                android:layout_below="@id/lb_password"
+                android:layout_marginTop="16dp"/>
+            <ImageView
+                android:id="@+id/ic_bookings"
+                style="@style/user_details_icon"
+                android:src="@drawable/ic_my_bookings"
+                android:layout_below="@id/ic_password"/>
+            <TextView
+                style="@style/user_details"
+                android:text="My Bookings"
+                android:layout_toRightOf="@id/ic_bookings"
+                android:layout_below="@id/lb_bookings"/>
+            <ImageView
+                android:id="@+id/ic_address"
+                style="@style/user_details_icon"
+                android:src="@drawable/ic_address"
+                android:layout_below="@id/ic_bookings"/>
+            <TextView
+                android:id="@+id/lb_address"
+                style="@style/user_details"
+                android:text="Address"
+                android:layout_toRightOf="@id/ic_address"
+                android:layout_below="@id/ic_bookings"
+                android:layout_marginTop="13dp"/>
+
+
+        </RelativeLayout>
     </RelativeLayout>
 </FrameLayout>
