--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -48,5 +48,20 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/dark_blue_button</item>
     </style>
+    <style name="user_details_icon">
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+    <style name="user_details">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
 
 </resources>
