--- a/project/app/src/main/res/layout/fragment_user_details.xml
+++ b/project/app/src/main/res/layout/fragment_user_details.xml
@@ -110,6 +110,18 @@
                 android:layout_toRightOf="@id/ic_address"
                 android:layout_below="@id/ic_bookings"
                 android:layout_marginTop="13dp"/>
+            <ImageView
+                android:id="@+id/ic_address"
+                style="@style/user_details_icon"
+                android:src="@drawable/ic_address"
+                android:layout_below="@id/ic_bookings"/>
+            <TextView
+                android:id="@+id/lb_address"
+                style="@style/user_details"
+                android:text="Address"
+                android:layout_toRightOf="@id/ic_address"
+                android:layout_below="@id/ic_bookings"
+                android:layout_marginTop="13dp"/>
 
 
         </RelativeLayout>
