--- a/project/app/src/main/res/values/styles.xml
+++ b/project/app/src/main/res/values/styles.xml
@@ -54,6 +54,12 @@
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_marginTop">10dp</item>
     </style>
+    <style name="user_details_icon_2">
+        <item name="android:layout_width">20dp</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+    </style>
     <style name="user_details">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
