--- a/project/app/src/main/res/layout/fragment_f__deal_details.xml
+++ b/project/app/src/main/res/layout/fragment_f__deal_details.xml
@@ -8,6 +8,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+
     <com.denzcoskun.imageslider.ImageSlider
         android:id="@+id/image_slider"
         android:layout_width="wrap_content"
@@ -59,8 +60,8 @@
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Pure Milford welcome you aboard atmospheric in mageicalyou aboard atmospheric in mageical"
-                android:textColor="@color/dark_blue_text"
+                android:text="@string/deal_description"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:paddingLeft="10dp"
@@ -70,8 +71,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@drawable/button_outline"
-                android:layout_margin="10dp">
+                android:background="@drawable/section_outline"
+                android:layout_margin="20dp"
+                android:padding="10dp">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -89,38 +91,42 @@
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Enjoy a 1hr 45min – 2 hour cruise through ancient rainforest, towering cliffs and waterfalls." />
-
+                    android:text="@string/h3"/>
                 <TextView
                     style="@style/highlights_sec_text"
                     android:id="@+id/textView3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Learn plenty of Fiordland facts from our famously friendly skipper and crew." />
+                    android:text="@string/h1" />
 
                 <TextView
                     style="@style/highlights_sec_text"
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Learn plenty of Fiordland facts from our famously friendly skipper and crew." />
+                    android:text="@string/h2" />
 
                 <TextView
                     style="@style/highlights_sec_text"
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Free tea and coffee throughout the cruise with an onboard Cafe Bar serving hot and cold food and beverages" />
-
+                    android:text="@string/h1"/>
                 <TextView
                     style="@style/highlights_sec_text"
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Free tea and coffee throughout the cruise with an onboard Cafe Bar serving hot and cold food and beverages" />
-
+                    android:text="@string/deal_description"/>
 
             </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="20dp"
+                android:text="@string/h2"
+                android:textColor="@color/black"/>
 
         </LinearLayout>
     </ScrollView>
