--- a/project/app/src/main/res/layout/activity_chome_screen.xml
+++ b/project/app/src/main/res/layout/activity_chome_screen.xml
@@ -5,83 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
-    <SearchView
-        android:id="@+id/search_view"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:background="@drawable/button_outline"
-        android:queryHint="Search"
-        android:iconifiedByDefault="false"
-        android:backgroundTint="@color/sec_color"
 
-
-        />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/tab_layout"
-        android:layout_below="@id/search_view">
-        <com.google.android.material.tabs.TabLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabTextColor="@color/black"
-            app:tabIndicatorColor="@color/sec_color"
-            app:tabIndicatorHeight="4dp"
-            android:id="@+id/home_tab">
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Featured Deals"
-                android:id="@+id/bt_tab_featured_deals"/>
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Categories"
-                android:id="@+id/bt_tab_categories"/>
-
-
-        </com.google.android.material.tabs.TabLayout>
-
-    </LinearLayout>
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/homeScreen"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="500dp"-->
-
-<!--        android:background="@color/white"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:context=".C_homeScreen"-->
-<!--        android:layout_below="@id/tab_layout"/>-->
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="550dp"
-        android:layout_below="@id/tab_layout">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/l_nav_bar">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/frame_layout"/>
+            android:id="@+id/main_frame"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/sec_color">
+        android:background="@color/sec_color"
+        android:id="@+id/l_nav_bar">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/sec_color"
-            app:menu="@menu/bottom_nav_menu">
+            app:menu="@menu/bottom_nav_menu"
+            android:id="@+id/nav_bar">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
 
