finished with available deals fragement

--- a/project/app/src/main/res/layout/fragment_f__availble__deals.xml
+++ b/project/app/src/main/res/layout/fragment_f__availble__deals.xml
@@ -3,13 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".F_Availble_Deals">
+    tools:context=".F_Availble_Deals"
+    android:background="@color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:textColor="@color/black"/>
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/tv_available_deals"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Available Deals"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_marginTop="40dp"
+            android:layout_centerHorizontal="true"/>
+        <TextView
+            android:id="@+id/tv_line"
+            android:layout_width="250dp"
+            android:layout_height="5dp"
+            android:text="Available Deals"
+            android:textSize="18sp"
+            android:background="@drawable/bt_sec_color"
+            android:layout_below="@+id/tv_available_deals"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/sec_color"
+            android:layout_marginTop="10dp"
+            />
+        <FrameLayout
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/tv_line"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/main_frame_av_de"/>
 
+
+    </RelativeLayout>
 </FrameLayout>
