--- a/project/app/src/main/res/layout/fragment_f__home.xml
+++ b/project/app/src/main/res/layout/fragment_f__home.xml
@@ -12,12 +12,10 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:background="@drawable/button_outline"
+        android:background="@drawable/search_bar_bg"
         android:queryHint="Search"
         android:iconifiedByDefault="false"
         android:backgroundTint="@color/sec_color"
-
-
         />
 
     <LinearLayout
