category and description displays dynamically

--- a/project/app/src/main/res/layout/fragment_category_frag.xml
+++ b/project/app/src/main/res/layout/fragment_category_frag.xml
@@ -15,11 +15,13 @@
         <Button
             style="@style/darkBlueButton"
             android:text="things to do"
+            android:id="@+id/btThingsToDo"
             />
         <Button
             style="@style/darkBlueButton"
             android:layout_marginTop="200dp"
             android:text="Restaurants"
+            android:id="@+id/btRestaurants"
             />
     </RelativeLayout>
 
