--- a/project/app/src/main/res/layout/fragment_f__deal_details.xml
+++ b/project/app/src/main/res/layout/fragment_f__deal_details.xml
@@ -46,6 +46,7 @@
 
 
                 <TextView
+                    android:id="@+id/tv_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
